--- a/DSA/Stack.ipynb
+++ b/DSA/Stack.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "cfd81d81",
+   "metadata": {},
+   "source": [
+    "# STACK"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "a52ef22c",
    "metadata": {},
    "outputs": [
@@ -78,8 +86,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "12e7fb2a",
+   "metadata": {},
+   "source": [
+    "# DECLARATION OF STACK"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "4e4ee687",
    "metadata": {},
    "outputs": [
@@ -97,8 +113,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ad6a2e35",
+   "metadata": {},
+   "source": [
+    "# FUNCTIONS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ace4132",
+   "metadata": {},
+   "source": [
+    "# PUSH"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "b834be45",
    "metadata": {},
    "outputs": [
@@ -119,8 +151,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "77f7f8e0",
+   "metadata": {},
+   "source": [
+    "# POP"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "368765f5",
    "metadata": {},
    "outputs": [
@@ -141,8 +181,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2cb18ef0",
+   "metadata": {},
+   "source": [
+    "# PEEK"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "c955356b",
    "metadata": {},
    "outputs": [
@@ -160,8 +208,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "67c5e295",
+   "metadata": {},
+   "source": [
+    "# isEmpty"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "ee385999",
    "metadata": {},
    "outputs": [
@@ -179,8 +235,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "222f0c82",
+   "metadata": {},
+   "source": [
+    "# SIZE"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "91af695f",
    "metadata": {},
    "outputs": [
@@ -201,11 +265,25 @@
    "cell_type": "markdown",
    "id": "18e0f5bc",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 1. Next Greater Element (NGE) Using Stack\n",
+    "\n",
+    "Problem:\n",
+    "\n",
+    "- Given an array, for each element, find the next greater element to its right. If there’s no greater element, print -1 for that position.\n",
+    "\n",
+    "- Solve this using a stack efficiently in O(n) time.\n",
+    "\n",
+    "\n",
+    "Example\n",
+    "\n",
+    "Input: [4, 5, 2, 25]  \n",
+    "Output: {4: 5, 5: 25, 2: 25, 25: -1}\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "4bb4444c",
    "metadata": {},
    "outputs": [
@@ -240,8 +318,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9e5e4d2d",
+   "metadata": {},
+   "source": [
+    "### 2. Check for Balanced Parentheses\n",
+    "\n",
+    "Example:\n",
+    "\n",
+    "Input: \"{ [ ( ) ] }\" → Balanced\n",
+    "\n",
+    "Input: \"{ [ ( ] ) }\" → Not Balanced"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "2e87ec61",
    "metadata": {},
    "outputs": [
@@ -275,8 +367,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5ff842d3",
+   "metadata": {},
+   "source": [
+    "## 3. Reverse a String Using Stack\n",
+    "\n",
+    "Example:\n",
+    "\n",
+    "Input: \"hello\"\n",
+    "\n",
+    "Output: \"olleh\""
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "3ed7b9fb",
    "metadata": {},
    "outputs": [
@@ -306,8 +412,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a04504ba",
+   "metadata": {},
+   "source": [
+    "### 4. Sort a Stack (Using One More Stack)\n",
+    "\n",
+    "Example:\n",
+    "\n",
+    "Input: [34, 3, 31, 98, 92, 23]\n",
+    "\n",
+    "Output: [3, 23, 31, 34, 92, 98]"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "fed09b93",
    "metadata": {},
    "outputs": [
