--- a/Machine Learning/Supervised Learning/Linear Regression/Car_price_LR.ipynb
+++ b/Machine Learning/Supervised Learning/Linear Regression/Car_price_LR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "cea4560e-1c65-466d-b995-91a011422ea2",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
+   "id": "fc05057a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\visha\\Videos\\CLG\\TNS\\Machine Learning\\Supervised Learning\\Linear Regression\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "print(os.getcwd())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "c27606e2-afd5-4639-a320-fbd6299dc3a7",
    "metadata": {},
    "outputs": [
@@ -66,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ddb9b861",
    "metadata": {},
    "outputs": [
@@ -99,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "de7aae80-c5dc-4e0c-8d3c-4c69cdd8014a",
    "metadata": {},
    "outputs": [
@@ -136,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "01a73df0-253b-4f26-aa00-2c8ecb42c067",
    "metadata": {},
    "outputs": [],
@@ -150,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "67410f5d-7a50-43d2-bf8e-43df8ffb0ddf",
    "metadata": {},
    "outputs": [
@@ -183,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "8359eed9-3dca-41d9-ae63-7d55f5f226e4",
    "metadata": {},
    "outputs": [],
@@ -196,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "f1c18b35-166a-458c-90a2-ecf21fc69543",
    "metadata": {},
    "outputs": [],
@@ -208,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "f86604aa-85f5-492d-9376-7b62ffbb9714",
    "metadata": {},
    "outputs": [
@@ -639,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "4a5153b1-fcec-463f-8180-5c0bd54fac28",
    "metadata": {},
    "outputs": [],
@@ -651,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "b93fbdd7-fc21-4d4b-88ea-6c955a3c3db3",
    "metadata": {},
    "outputs": [
@@ -673,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "51469045-8547-41cd-8616-d552999e67bd",
    "metadata": {},
    "outputs": [
