--- a/Machine Learning/Supervised Learning/Linear Regression/Multilinear Regression.ipynb
+++ b/Machine Learning/Supervised Learning/Linear Regression/Multilinear Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "6cf96d12-625a-4a1b-9eb9-f482c1bafdf5",
    "metadata": {},
    "outputs": [
@@ -14,14 +14,6 @@
       "Coefficient for Hours_Studied (b1): 0.30769230769230776\n",
       "Coefficient for Problems_Solved (b2): 1.5384615384615388\n",
       "Predicted Marks: 65.61538461538461\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\visha\\AppData\\Roaming\\Python\\Python312\\site-packages\\sklearn\\base.py:493: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
-      "  warnings.warn(\n"
      ]
     }
    ],
@@ -52,19 +44,11 @@
     "\n",
     "# Step 5: Make a prediction\n",
     "# Example: Predict marks for a student who studied 5 hours and solved 25 problems\n",
-    "predicted = model.predict([[7, 25]])\n",
+    "predicted = model.predict(pd.DataFrame([[7, 25]], columns=['Hours_Studied', 'Problems_Solved']))\n",
     "print(\"Predicted Marks:\", predicted[0])\n",
     "\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ae6112ef-b101-4052-a9f5-9ad14216b22e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
